--- a/app/sass/_level-select.scss
+++ b/app/sass/_level-select.scss
@@ -55,3 +55,7 @@
     margin-left:90%;
     font-size:1.50rem;
 }
+
+#titles-fix {
+    vertical-align: 1em;
+}
